crates/swc/tests/tsc-references/plainJSGrammarErrors4.1.normal.js
//// [plainJSGrammarErrors4.js]
class A {
    #a;
    m() {
        this.#a; // ok
        this.#b; // error
    }
}
